plugins {
    id 'java'
}


java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'jakarta.servlet:jakarta.servlet-api:5.0.0'
    implementation 'org.reflections:reflections:0.10.2'
    implementation 'ch.qos.logback:logback-classic:1.5.18'
    implementation 'org.apache.commons:commons-lang3:3.18.0'

    testImplementation 'org.assertj:assertj-core:3.27.3'
    testImplementation 'org.mockito:mockito-core:5.18.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.13.3'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.13.3'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.10.1'
}

test {
    useJUnitPlatform()
}
